# -python-_page_analyzer

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  database.sql  pyproject.toml  setup.cfg
.github/workflows/: tarakanov-check.yml
page_analyzer/: __init__.py  app.py  database_operations.py  init_db.py  temple_for_delete.py  utility_function.py
page_analyzer/templates/: 500.html  base.html  index.html  sites.html  url_info.html
tests/: test_app_view.py  utility_test_func.py
